1.project config and add core file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "standard.enable": false,
   "eslint.enable": false,
-  "tslint.autoFixOnSave": true,
-  "editor.formatOnSave": false
+  "tslint.configFile": "./tsconfig.json"
 }
