--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "d-console",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "simple, no setting console for command line tool",
-  "main": "index.js",
+  "main": "./dist/lib/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
-    "test": "npm run build && node ./test/index.test.js"
+    "publish": "npm run build && npm publish",
+    "test": "ts-node ./test/index.test.ts"
   },
   "repository": {
     "type": "git",
