--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "typeRoots": ["node_modules/@types"]
   },
   "include": ["**/*.ts"],
-  "exclude": ["test/**/*.ts"]
+  "exclude": ["test/**/*.ts", "dist", "node_modules"]
 }
