--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
     "moduleResolution": "node",
     "target": "es6",
     "module": "commonjs",
-    "lib": ["es6", "es2015", "es2016", "es2017"],
+    "lib": [
+      "es6",
+      "es2015",
+      "es2016",
+      "es2017"
+    ],
     "strict": true,
     "sourceMap": false,
     "declaration": true,
@@ -12,8 +17,16 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
-  "include": ["**/*.ts"],
-  "exclude": ["test/**/*.ts", "dist", "node_modules"]
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "test/**/*.ts",
+    "dist",
+    "node_modules"
+  ]
 }
